--- a/views/show_migration_fee.erb
+++ b/views/show_migration_fee.erb
@@ -1,12 +1,17 @@
 <%
  mf = migration_fee
+ url_path = request.env['PATH_INFO'].to_s
+ byron_ep = "/byron-wallets/#{wallet_id}"
+ shelley_ep = "/wallets/#{wallet_id}"
+ byron_migr_ep = "/byron-wallets-migration-fee/#{wallet_id}"
+ shelley_migr_ep = "/wallets-migration-fee/#{wallet_id}"
 %>
 
 <div class="list-group">
   <div class="list-group-item">
      Migration fee
-     <small><a href="/byron-wallets-migration-fee/<%= wallet_id %>">refresh</a></small>
-     | <small><a href="/byron-wallets/<%= wallet_id %>">go back to wallet</a></small>
+     <small><a href="<%= (url_path.include? "byron") ? byron_migr_ep : shelley_migr_ep %>">refresh</a></small>
+     | <small><a href="<%= (url_path.include? "byron") ? byron_ep : shelley_ep %>">go back to wallet</a></small>
   </div>
   <div class="list-group-item">
     <small><b>Migration fee: </b>
