--- a/views/discovery.erb
+++ b/views/discovery.erb
@@ -26,7 +26,7 @@ wallet_servers.each do |s|
         <input type="text" class="form-control" name="cmd_line" id="cmd_line"
              value="<%= cmdline_to_print %>">
       </div>
-      <input type="hidden" name="wallet_port" value="<%= port %>"/>
+      <input type="hidden" name="wallet_port" value="<%= port ? port : 8090 %>"/>
       <input type="hidden" name="protocol" value="<%= protocol %>"/>
       <input type="hidden" name="cacert" value="<%= cacert %>"/>
       <input type="hidden" name="pem" value="<%= pem %>"/>
@@ -34,9 +34,11 @@ wallet_servers.each do |s|
         <% if port %>
           <button type="submit" class="btn btn-success">Connect</button>
         <% else %>
-          <span class="alert alert-warning">
-            Cannot read wallet's port from the command-line. ¯\_(ツ)_/¯
-          </span>
+        <button type="submit" class="btn btn-success">Connect</button>
+          <small class="alert alert-warning">
+            Cannot read wallet's port from the command-line.
+            Let's try with default '8090'.
+          </small>
         <% end %>
       </div>
 
