--- a/views/layout.erb
+++ b/views/layout.erb
@@ -25,7 +25,7 @@
         <%= erb :form_connect %>
       </div>
       <small>
-        Version: <span id="version">v2020-05-06</span><br/>
+        Version: <span id="version">v2020-05-06-discovery</span><br/>
         Platform: <%= session[:platform] %>
       </small>
     </nav>
