don't display certs in form by default

--- a/views/form_connect.erb
+++ b/views/form_connect.erb
@@ -36,7 +36,7 @@
       </div>
 
     </div>
-    <div id="certs" class="col">
+    <div id="certs" class="col" style="display:none">
         <div class="input-group">
           <input title="Cacert" placeholder="Cacert" type="text" value="<%= session[:opt][:cacert]%>" name="cacert"
                 class="form-control" >
