--- a/views/layout.erb
+++ b/views/layout.erb
@@ -25,7 +25,10 @@
         <%= erb :form_connect %>
       </div>
       <small>
-        Version: <span id="version">v2020-05-06-discovery</span><br/>
+        Version: <a id="version" target="_blank" href="https://github.com/piotr-iohk/ikar/releases">
+                  v2020-06-05
+                 </a>
+                 <br/>
         Platform: <%= session[:platform] %>
       </small>
     </nav>
