--- a/views/form_join_quit_sp.erb
+++ b/views/form_join_quit_sp.erb
@@ -26,17 +26,18 @@ quit_ep = "/stake-pools-quit"
 
       <div class="form-group">
         <label for="spid">Stake pool</label>
-          <% if url_path.include? "join" %>
-            <select class="form-control" name="spid" id="spid">
-              <% stake_pools.each do |s| %>
-                  <option <%= sid == s['id'] ? "selected" : "" %> value="<%= s['id'] %>">
-                    <%= "#{s['id']} [perf: #{s['apparent_performance']}]" %></option>
-             <% end %>
-           </select>
-          <% end %>
-          <% if url_path.include? "quit" %>
-           <input type="text" class="form-control" name="spid" id="spid" placeholder="*" value="*">
-          <% end %>
+
+            <% if stake_pools %>
+              <select class="form-control" name="spid" id="spid">
+                <% stake_pools.each do |s| %>
+                    <option <%= sid == s['id'] ? "selected" : "" %> value="<%= s['id'] %>">
+                      <%= "#{s['id']} [perf: #{s['apparent_performance']}]" %></option>
+                <% end %>
+              </select>
+            <% else %>
+              <input type="text" class="form-control" name="spid" id="spid" placeholder="*" value="*">
+            <% end %>
+
       </div>
 
 
