--- a/views/form_join_quit_sp.erb
+++ b/views/form_join_quit_sp.erb
@@ -31,11 +31,12 @@ quit_ep = "/stake-pools-quit"
               <select class="form-control" name="spid" id="spid">
                 <% stake_pools.each do |s| %>
                     <option <%= sid == s['id'] ? "selected" : "" %> value="<%= s['id'] %>">
-                      <%= "#{s['id']} [perf: #{s['apparent_performance']}]" %></option>
+                      <%= "#{s['id']} [non-myopic rewards: #{s['metrics']['non_myopic_member_rewards']}, saturation: #{s['metrics']['saturation']}]" %></option>
                 <% end %>
               </select>
             <% else %>
-              <input type="text" class="form-control" name="spid" id="spid" placeholder="*" value="*">
+              <input type="text" class="form-control" name="spid" id="spid" placeholder="Stake pool id" value="">
+              <small id="help" class="form-text text-muted">Put a known stake pool id.</small>
             <% end %>
 
       </div>
