--- a/views/stake_pools.erb
+++ b/views/stake_pools.erb
@@ -1,18 +1,21 @@
 <%
+wid = params['wid']
+ep = "stake-pools-list?wid=#{wid}"
 sort_by = params[:sort_by] if params[:sort_by]
+
 case sort_by
 when "blocks"
   sp = stake_pools.sort_by {|s| -s['metrics']['produced_blocks']['quantity']}
 when "stake"
-  sp = stake_pools.sort_by {|s| -s['metrics']['controlled_stake']['quantity']}
+  sp = stake_pools.sort_by {|s| -s['metrics']['relative_stake']['quantity']}
 when "cost"
   sp = stake_pools.sort_by {|s| -s['cost']['quantity']}
 when "margin"
   sp = stake_pools.sort_by {|s| -s['margin']['quantity']}
-when "performance"
-  sp = stake_pools.sort_by {|s| -s['apparent_performance']}
+when "non_myopic_member_rewards"
+  sp = stake_pools.sort_by {|s| -s['metrics']['non_myopic_member_rewards']['quantity']}
 when "saturation"
-  sp = stake_pools.sort_by {|s| -s['saturation']}
+  sp = stake_pools.sort_by {|s| -s['metrics']['saturation']}
 else
   sp = stake_pools
 end
@@ -20,27 +23,54 @@ end
 
 <div class="list-group">
   <div class="list-group-item">
+     <form action="/stake-pools-list" method="GET" >
+       <div class="form-row">
+
+         <div class="col">
+           <div class="form-group">
+             <select class="form-control" name="wid" id="wid">
+               <% wallets.each do |w| %>
+               <option <%= wid == w['id'] ? "selected" : "" %> value="<%= w['id'] %>">
+                 <%= "#{w['name']} [id: #{w['id']}, balance available: #{w['balance']['available']['quantity']} , delegation: #{w['delegation']}]" %>
+               </option>
+               <% end %>
+             </select>
+             <small id="help" class="form-text text-muted">
+               Listing stake pools for <a href="/wallets/<%= wid %>"><%= wallets.select{|w| w['id'] == wid}.first['name'] %>.</a>
+             </small>
+
+           </div>
+         </div>
+         <div class="col">
+           <button type="submit" class="btn btn-success">List Stake Pools</button>
+         </div>
+       </div>
+     </form>
+  </div>
+  <div class="list-group-item">
      <%= "Stake pools: #{stake_pools.size}" %>
-     <small><a href="/stake-pools">by desirability</a></small>
-     | <small><a href="/stake-pools?sort_by=performance">by performance</a></small>
-     | <small><a href="/stake-pools?sort_by=saturation">by saturation</a></small>
-     | <small><a href="/stake-pools?sort_by=blocks">by produced blocks</a></small>
-     | <small><a href="/stake-pools?sort_by=stake">by controlled stake</a></small>
-     | <small><a href="/stake-pools?sort_by=cost">by cost</a></small>
-     | <small><a href="/stake-pools?sort_by=margin">by margin</a></small>
+     | <small><a href="<%= ep %>&sort_by=saturation">by saturation</a></small>
+     | <small><a href="<%= ep %>&sort_by=non_myopic_member_rewards">by non-myopic member rewards</a></small>
+     | <small><a href="<%= ep %>&sort_by=blocks">by produced blocks</a></small>
+     | <small><a href="<%= ep %>&sort_by=stake">by relative stake</a></small>
+     | <small><a href="<%= ep %>&sort_by=cost">by cost</a></small>
+     | <small><a href="<%= ep %>&sort_by=margin">by margin</a></small>
   </div>
   <% sp.each_with_index do |s, i| %>
       <div class="list-group-item">
         <div class="d-flex w-100 justify-content-between">
           <h5 class="mb-1"><%= "#{i + 1}: #{s['id']}" %></h5>
         </div>
-        <small><b>Desirability:</b> <%= s['desirability'] %></small><br/>
-        <small><b>Apparent performance:</b> <%= s['apparent_performance'] %></small><br/>
-        <small><b>Saturation:</b> <%= s['saturation'] %></small><br/>
-        <small><b>Controlled stake:</b> <%= s['metrics']['controlled_stake']['quantity'] if s['metrics'] %> lovelace</small><br/>
-        <small><b>Produced blocks:</b> <%= s['metrics']['produced_blocks']['quantity'] if s['metrics'] %></small><br/>
         <small><b>Margin:</b> <%= s['margin']['quantity'] %>%</small><br/>
         <small><b>Cost:</b> <%= s['cost']['quantity'] %> lovelace</small><br/>
+        <small><b>Metrics:</b></small></br>
+        <small>&nbsp;&nbsp;<b>Saturation:</b> <%= s['metrics']['saturation'] if s['metrics'] %></small><br/>
+        <small>&nbsp;&nbsp;<b>Non-myopic member rewards:</b>
+          <%= "#{s['metrics']['non_myopic_member_rewards']['quantity']} #{s['metrics']['non_myopic_member_rewards']['unit']}" if s['metrics'] %>
+        </small><br/>
+        <small>&nbsp;&nbsp;<b>Produced blocks:</b> <%= s['metrics']['produced_blocks']['quantity'] if s['metrics'] %></small><br/>
+        <small>&nbsp;&nbsp;<b>Relative stake:</b> <%= "#{s['metrics']['relative_stake']['quantity']}%" if s['metrics'] %></small><br/>
+
 
         <% if s['metadata'] %>
           <small><b>Metadata:</b></small></br>
@@ -66,8 +96,8 @@ end
           <small><b style="text-color:red">No metadata.</b></small></br>
         <% end %>
         <small>
-            <a href="/stake-pools-join?sid=<%= s['id']%>">join</a>
-          | <a href="/stake-pools-quit?sid=<%= s['id']%>">quit</a>
+            <a href="/stake-pools-join?sid=<%= s['id']%>&wid=<%= wid %>">join</a>
+          | <a href="/stake-pools-quit">quit</a>
         </small>
       </div>
    <% end %>
