--- a/views/stake_pools.erb
+++ b/views/stake_pools.erb
@@ -97,7 +97,7 @@ end
         <% end %>
         <small>
             <a href="/stake-pools-join?sid=<%= s['id']%>&wid=<%= wid %>">join</a>
-          | <a href="/stake-pools-quit">quit</a>
+          | <a href="/stake-pools-quit?wid=<%= wid %>">quit</a>
         </small>
       </div>
    <% end %>
