List stake pools based on intended stake (cardano-node)

--- a/views/main_nav.erb
+++ b/views/main_nav.erb
@@ -29,7 +29,7 @@
     <a class="nav-link dropdown-toggle <%="disabled" unless session[:w_connected]%>"
       data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Stake-pools</a>
     <div class="dropdown-menu">
-      <a class="dropdown-item" href="/stake-pools">List</a>
+      <a class="dropdown-item" href="/stake-pools-list?stake=1">List</a>
       <a class="dropdown-item" href="/stake-pools-join">Join</a>
       <a class="dropdown-item" href="/stake-pools-quit">Quit</a>
     </div>
