Add desired pool number in network/parameters

--- a/views/network_params.erb
+++ b/views/network_params.erb
@@ -28,5 +28,8 @@
     <small><b>Decentralization level: </b>
       <%= "#{p['decentralization_level']['quantity']} #{p['decentralization_level']['unit']}" %>
     </small><br/>
+    <small><b>Desired pool number: </b>
+      <%= p['desired_pool_number'] %>
+    </small><br/>
   </div>
 </div>
