--- a/views/form_tx_to_address.erb
+++ b/views/form_tx_to_address.erb
@@ -24,13 +24,16 @@ wid = params[:wid] if params[:wid]
       </div>
 
       <div class="form-group">
-      </div>
-
-      <div class="form-group">
         <label for="address">Address</label>
         <input type="text" class="form-control" name="address" id="address" placeholder="Address" value="">
 
       </div>
+      <% unless (url_path.include? "byron") %>
+      <div class="form-group form-check">
+        <input type="checkbox" class="form-check-input" id="withdrawRewards" name="withdrawRewards">
+        <label class="form-check-label" for="withdrawRewards">Use rewards in transaction</label>
+      </div>
+      <% end %>
 
 
       <button type="submit" class="btn btn-success">Send Tx</button>
