--- a/views/wallet.erb
+++ b/views/wallet.erb
@@ -163,9 +163,10 @@
                  &nbsp;&nbsp;<b>Changes at:</b><br/>
                  &nbsp;&nbsp;&nbsp;&nbsp;<b>Epoch start time:</b> <%= n['changes_at']['epoch_start_time']%><br/>
                  &nbsp;&nbsp;&nbsp;&nbsp;<b>Epoch number:</b> <%= n['changes_at']['epoch_number']%>
-               </small><br/><br/>
-             <%  end
-               end %>
+               </small><br/>
+             <% end %>
+              <br/>
+           <% end %>
          <% end %>
 
            <%
