Minimum utxo value

--- a/views/network_params.erb
+++ b/views/network_params.erb
@@ -31,5 +31,8 @@
     <small><b>Desired pool number: </b>
       <%= p['desired_pool_number'] %>
     </small><br/>
+    <small><b>Minimum utxo value: </b>
+      <%="#{p['minimum_utxo_value']['quantity']} #{p['minimum_utxo_value']['unit']}" %>
+    </small><br/>
   </div>
 </div>
