--- a/views/wallet.erb
+++ b/views/wallet.erb
@@ -43,7 +43,7 @@
                <a class="dropdown-item" href="/tx-between-wallets?wid=<%= id %>">Between my wallets</a>
                <a class="dropdown-item" href="/tx-to-address?wid=<%= id %>">To address</a>
                <a class="dropdown-item" href="/tx-fee-to-address?wid=<%= id %>">Payment fees</a>
-               <a class="dropdown-item" href="/rewards?wid=<%= id %>&minWithdrawal=10000000">Rewards history</a>
+               <a class="dropdown-item" href="/rewards?wid=<%= id %>&minWithdrawal=1">Rewards history</a>
              </div>
            </div>
            <div>
