--- a/views/form_tx_between_wallets.erb
+++ b/views/form_tx_between_wallets.erb
@@ -33,10 +33,15 @@ wid = params[:wid] if params[:wid]
         <small id="help" class="form-text text-muted">I will pick up an unused address from that wallet and send funds to it.</small>
       </div>
 
-      <div class="form-group form-check">
-        <input type="checkbox" class="form-check-input" id="withdrawRewards" name="withdrawRewards">
-        <label class="form-check-label" for="withdrawRewards">Use rewards in transaction</label>
-      </div>
+      <% unless (url_path.include? "byron") %>
+        <div class="form-group">
+          <label class="form-check-label" for="withdrawal">Use rewards in transaction</label>
+          <input type="text" class="form-control" class="form-check-input" id="withdrawal"
+                name="withdrawal"
+                placeholder="self or mnemonics">
+          <small id="help" class="form-text text-muted">Use: 'self' for self withdrawal or mnemonic sentence for external one.</small>
+        </div>
+      <% end %>
 
       <button type="submit" class="btn btn-success">Send Tx</button>
       (or <a href="/tx-to-address?wid=<%= wid %>">send to address</a>)
