--- a/views/form_tx_to_address.erb
+++ b/views/form_tx_to_address.erb
@@ -29,10 +29,13 @@ wid = params[:wid] if params[:wid]
 
       </div>
       <% unless (url_path.include? "byron") %>
-      <div class="form-group form-check">
-        <input type="checkbox" class="form-check-input" id="withdrawRewards" name="withdrawRewards">
-        <label class="form-check-label" for="withdrawRewards">Use rewards in transaction</label>
-      </div>
+        <div class="form-group">
+          <label class="form-check-label" for="withdrawal">Use rewards in transaction</label>
+          <input type="text" class="form-control" class="form-check-input" id="withdrawal"
+                name="withdrawal"
+                placeholder="self or mnemonics">
+          <small id="help" class="form-text text-muted">Use: 'self' for self withdrawal or mnemonic sentence for external one.</small>
+        </div>
       <% end %>
 
 
