Fix network information while syncing through Byron era

--- a/views/network_info.erb
+++ b/views/network_info.erb
@@ -7,9 +7,11 @@
      <small><a href="/network-info">refresh</a></small>
   </div>
   <div class="list-group-item">
+    <% if n['network_tip'] %>
     <small><b>Network tip: </b></small><br/>
     <small>&nbsp;&nbsp;<b>Epoch: </b><%= n['network_tip']['epoch_number'] %></small><br/>
     <small>&nbsp;&nbsp;<b>Slot: </b><%= n['network_tip']['slot_number'] %></small><br/>
+    <% end %>
     <small><b>Node tip: </b></small><br/>
     <small>&nbsp;&nbsp;<b>Epoch: </b><%= n['node_tip']['epoch_number'] %></small><br/>
     <small>&nbsp;&nbsp;<b>Slot: </b><%= n['node_tip']['slot_number'] %></small><br/>
@@ -18,8 +20,10 @@
     <b>Status:</b> <%= n['sync_progress']['status'] %>
                    <%= n['sync_progress']['status'] == "syncing" ? ", Progress: #{n['sync_progress']['progress']['quantity']}%" : ""%>
     </small><br/>
+    <% if n['next_epoch'] %>
     <small><b>Next epoch: </b></small><br/>
     <small>&nbsp;&nbsp;<b>Epoch start time: </b><%= n['next_epoch']['epoch_start_time'] %></small><br/>
     <small>&nbsp;&nbsp;<b>Epoch number: </b><%= n['next_epoch']['epoch_number'] %></small><br/>
+    <% end %>
   </div>
 </div>
