--- a/views/wallet.erb
+++ b/views/wallet.erb
@@ -229,27 +229,7 @@
            <div class="list-group-item">
              Txs total:<br/>
              <% txs.each do |tx| %>
-                <small><b>ID: </b><a href="<%= (url_path.include? "byron") ? "/byron-wallets" : "/wallets" %><%= "/#{id}/txs/#{tx['id']}" %>"><%= tx['id']%></a></small><br/>
-                <% if tx['inserted_at']%>
-                    <small><b>Inserted at: </b></small><br/>
-                    <small>&nbsp;&nbsp;<b>Time: </b><%= tx['inserted_at']['time'] %></small><br/>
-                    <small>&nbsp;&nbsp;<b>(Block: </b><%= tx['inserted_at']['block']['height']['quantity'] %>, </small>
-                    <small>&nbsp;&nbsp;<b>Epoch: </b><%= tx['inserted_at']['block']['epoch_number'] %>, </small>
-                    <small>&nbsp;&nbsp;<b>Slot: </b><%= tx['inserted_at']['block']['slot_number'] %>)</small><br/>
-                <% end %>
-                <% if tx['pending_since']%>
-                    <small><b>Pending since: </b></small><br/>
-                    <small>&nbsp;&nbsp;<b>Time: </b><%= tx['pending_since']['time'] %></small><br/>
-                    <small>&nbsp;&nbsp;<b>(Block: </b><%= tx['pending_since']['block']['height']['quantity'] %>, </small>
-                    <small>&nbsp;&nbsp;<b>Epoch: </b><%= tx['pending_since']['block']['epoch_number'] %>, </small>
-                    <small>&nbsp;&nbsp;<b>Slot: </b><%= tx['pending_since']['block']['slot_number'] %>)</small><br/>
-                <% end %>
-                <small><b>Status: </b><%= tx['status'] %></small><br/>
-                <small><b>Amount: </b><%= tx['amount']['quantity'] if tx['amount'] %></small><br/>
-                <small><b>Direction: </b><%= tx['direction'] %></small><br/>
-                <small><b>Depth: </b><%= "#{tx['depth']['quantity']} blocks" if tx['depth'] %></small><br/>
-
-                <small>---</small><br/>
+                <%= render_tx_on_wallet_page(url_path, tx, id) %>
              <% end %>
            </div>
          </div>
@@ -257,27 +237,7 @@
            <div class="list-group-item">
              Txs pending:<br/>
              <% txs_pending.each do |tx| %>
-                <small><b>ID: </b><a href="<%= (url_path.include? "byron") ? "/byron-wallets" : "/wallets" %><%= "/#{id}/txs/#{tx['id']}" %>"><%= tx['id']%></a></small><br/>
-                <% if tx['inserted_at']%>
-                    <small><b>Inserted at: </b></small><br/>
-                    <small>&nbsp;&nbsp;<b>Time: </b><%= tx['inserted_at']['time'] %></small><br/>
-                    <small>&nbsp;&nbsp;<b>(Block: </b><%= tx['inserted_at']['block']['height']['quantity'] %>, </small>
-                    <small>&nbsp;&nbsp;<b>Epoch: </b><%= tx['inserted_at']['block']['epoch_number'] %>, </small>
-                    <small>&nbsp;&nbsp;<b>Slot: </b><%= tx['inserted_at']['block']['slot_number'] %>)</small><br/>
-                <% end %>
-                <% if tx['pending_since']%>
-                    <small><b>Pending since: </b></small><br/>
-                    <small>&nbsp;&nbsp;<b>Time: </b><%= tx['pending_since']['time'] %></small><br/>
-                    <small>&nbsp;&nbsp;<b>(Block: </b><%= tx['pending_since']['block']['height']['quantity'] %>, </small>
-                    <small>&nbsp;&nbsp;<b>Epoch: </b><%= tx['pending_since']['block']['epoch_number'] %>, </small>
-                    <small>&nbsp;&nbsp;<b>Slot: </b><%= tx['pending_since']['block']['slot_number'] %>)</small><br/>
-                <% end %>
-                <small><b>Status: </b><%= tx['status'] %></small><br/>
-                <small><b>Amount: </b><%= tx['amount']['quantity'] if tx['amount'] %></small><br/>
-                <small><b>Direction: </b><%= tx['direction'] %></small><br/>
-                <small><b>Depth: </b><%= "#{tx['depth']['quantity']} blocks" if tx['depth'] %></small><br/>
-
-                <small>---</small><br/>
+                <%= render_tx_on_wallet_page(url_path, tx, id) %>
              <% end %>
            </div>
          </div>
@@ -285,27 +245,7 @@
            <div class="list-group-item">
              Txs in ledger:<br/>
              <% txs_inledger.each do |tx| %>
-             <small><b>ID: </b><a href="<%= (url_path.include? "byron") ? "/byron-wallets" : "/wallets" %><%= "/#{id}/txs/#{tx['id']}" %>"><%= tx['id']%></a></small><br/>
-             <% if tx['inserted_at']%>
-                 <small><b>Inserted at: </b></small><br/>
-                 <small>&nbsp;&nbsp;<b>Time: </b><%= tx['inserted_at']['time'] %></small><br/>
-                 <small>&nbsp;&nbsp;<b>(Block: </b><%= tx['inserted_at']['block']['height']['quantity'] %>, </small>
-                 <small>&nbsp;&nbsp;<b>Epoch: </b><%= tx['inserted_at']['block']['epoch_number'] %>, </small>
-                 <small>&nbsp;&nbsp;<b>Slot: </b><%= tx['inserted_at']['block']['slot_number'] %>)</small><br/>
-             <% end %>
-             <% if tx['pending_since']%>
-                 <small><b>Pending since: </b></small><br/>
-                 <small>&nbsp;&nbsp;<b>Time: </b><%= tx['pending_since']['time'] %></small><br/>
-                 <small>&nbsp;&nbsp;<b>(Block: </b><%= tx['pending_since']['block']['height']['quantity'] %>, </small>
-                 <small>&nbsp;&nbsp;<b>Epoch: </b><%= tx['pending_since']['block']['epoch_number'] %>, </small>
-                 <small>&nbsp;&nbsp;<b>Slot: </b><%= tx['pending_since']['block']['slot_number'] %>)</small><br/>
-             <% end %>
-             <small><b>Status: </b><%= tx['status'] %></small><br/>
-             <small><b>Amount: </b><%= tx['amount']['quantity'] if tx['amount'] %></small><br/>
-             <small><b>Direction: </b><%= tx['direction'] %></small><br/>
-             <small><b>Depth: </b><%= "#{tx['depth']['quantity']} blocks" if tx['depth'] %></small><br/>
-
-             <small>---</small><br/>
+              <%= render_tx_on_wallet_page(url_path, tx, id) %>
              <% end %>
            </div>
          </div>
@@ -313,27 +253,7 @@
            <div class="list-group-item">
              Txs incoming:<br/>
              <% txs_in.each do |tx| %>
-                <small><b>ID: </b><a href="<%= (url_path.include? "byron") ? "/byron-wallets" : "/wallets" %><%= "/#{id}/txs/#{tx['id']}" %>"><%= tx['id']%></a></small><br/>
-                <% if tx['inserted_at']%>
-                    <small><b>Inserted at: </b></small><br/>
-                    <small>&nbsp;&nbsp;<b>Time: </b><%= tx['inserted_at']['time'] %></small><br/>
-                    <small>&nbsp;&nbsp;<b>(Block: </b><%= tx['inserted_at']['block']['height']['quantity'] %>, </small>
-                    <small>&nbsp;&nbsp;<b>Epoch: </b><%= tx['inserted_at']['block']['epoch_number'] %>, </small>
-                    <small>&nbsp;&nbsp;<b>Slot: </b><%= tx['inserted_at']['block']['slot_number'] %>)</small><br/>
-                <% end %>
-                <% if tx['pending_since']%>
-                    <small><b>Pending since: </b></small><br/>
-                    <small>&nbsp;&nbsp;<b>Time: </b><%= tx['pending_since']['time'] %></small><br/>
-                    <small>&nbsp;&nbsp;<b>(Block: </b><%= tx['pending_since']['block']['height']['quantity'] %>, </small>
-                    <small>&nbsp;&nbsp;<b>Epoch: </b><%= tx['pending_since']['block']['epoch_number'] %>, </small>
-                    <small>&nbsp;&nbsp;<b>Slot: </b><%= tx['pending_since']['block']['slot_number'] %>)</small><br/>
-                <% end %>
-                <small><b>Status: </b><%= tx['status'] %></small><br/>
-                <small><b>Amount: </b><%= tx['amount']['quantity'] if tx['amount'] %></small><br/>
-                <small><b>Direction: </b><%= tx['direction'] %></small><br/>
-                <small><b>Depth: </b><%= "#{tx['depth']['quantity']} blocks" if tx['depth'] %></small><br/>
-
-                <small>---</small><br/>
+                <%= render_tx_on_wallet_page(url_path, tx, id) %>
              <% end %>
            </div>
          </div>
@@ -341,27 +261,7 @@
            <div class="list-group-item">
              Txs outgoing:<br/>
              <% txs_out.each do |tx| %>
-                <small><b>ID: </b><a href="<%= (url_path.include? "byron") ? "/byron-wallets" : "/wallets" %><%= "/#{id}/txs/#{tx['id']}" %>"><%= tx['id']%></a></small><br/>
-                <% if tx['inserted_at']%>
-                    <small><b>Inserted at: </b></small><br/>
-                    <small>&nbsp;&nbsp;<b>Time: </b><%= tx['inserted_at']['time'] %></small><br/>
-                    <small>&nbsp;&nbsp;<b>(Block: </b><%= tx['inserted_at']['block']['height']['quantity'] %>, </small>
-                    <small>&nbsp;&nbsp;<b>Epoch: </b><%= tx['inserted_at']['block']['epoch_number'] %>, </small>
-                    <small>&nbsp;&nbsp;<b>Slot: </b><%= tx['inserted_at']['block']['slot_number'] %>)</small><br/>
-                <% end %>
-                <% if tx['pending_since']%>
-                    <small><b>Pending since: </b></small><br/>
-                    <small>&nbsp;&nbsp;<b>Time: </b><%= tx['pending_since']['time'] %></small><br/>
-                    <small>&nbsp;&nbsp;<b>(Block: </b><%= tx['pending_since']['block']['height']['quantity'] %>, </small>
-                    <small>&nbsp;&nbsp;<b>Epoch: </b><%= tx['pending_since']['block']['epoch_number'] %>, </small>
-                    <small>&nbsp;&nbsp;<b>Slot: </b><%= tx['pending_since']['block']['slot_number'] %>)</small><br/>
-                <% end %>
-                <small><b>Status: </b><%= tx['status'] %></small><br/>
-                <small><b>Amount: </b><%= tx['amount']['quantity'] if tx['amount'] %></small><br/>
-                <small><b>Direction: </b><%= tx['direction'] %></small><br/>
-                <small><b>Depth: </b><%= "#{tx['depth']['quantity']} blocks" if tx['depth'] %></small><br/>
-
-                <small>---</small><br/>
+                <%= render_tx_on_wallet_page(url_path, tx, id) %>
              <% end %>
            </div>
          </div>
