default amt to send = 1000000 lovelace

--- a/views/form_tx_fee_to_address.erb
+++ b/views/form_tx_fee_to_address.erb
@@ -21,7 +21,7 @@ wid = params[:wid] if params[:wid]
 
       <div class="form-group">
         <label for="amount">Amount</label>
-        <input type="text" class="form-control" name="amount" id="amount" placeholder="Amount to send" value="1">
+        <input type="text" class="form-control" name="amount" id="amount" placeholder="Amount to send" value="1000000">
 
       </div>
 
