--- a/views/form_tx_to_address.erb
+++ b/views/form_tx_to_address.erb
@@ -20,7 +20,7 @@ wid = params[:wid] if params[:wid]
         <label for="pass">Passphrase</label>
         <input type="text" class="form-control" name="pass" id="pass" placeholder="Passphrase" value="Secure Passphrase">
         <label for="amount">Amount</label>
-        <input type="text" class="form-control" name="amount" id="amount" placeholder="Amount to send" value="1">
+        <input type="text" class="form-control" name="amount" id="amount" placeholder="Amount to send" value="1000000">
       </div>
 
       <div class="form-group">
